Fix spacing issue

--- a/Howest.Movies.WebApp/wwwroot/css/custom.css
+++ b/Howest.Movies.WebApp/wwwroot/css/custom.css
@@ -17,3 +17,9 @@
     border-radius: .5em;
     border: 1px solid var(--mud-palette-primary);
 }
+
+.movie-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 216px);
+    justify-content: space-between;
+}
